--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 <body>
 	<div class="main">
-		<div class="canvas"></div>
+		<section class="section-hero">
+			<div class="canvas"></div>
+		</section>
 	</div>
 </body>
 
