--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         }
 	</script>
 	<script type="module" src="/lenis.js"></script>
-	<script type="module" src="/scripts.js"></script>
 </head>
 
 <body>
@@ -31,6 +30,9 @@
 			<div class="canvas"></div>
 		</section>
 	</div>
+
+	<script type="module" src="/gsap.js"></script>
+	<script defer type="module" src="/scripts.js"></script>
 </body>
 
 </html>
